<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/picture_cardview_main"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_vertical_dimen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_recyclerview"
        android:paddingRight="@dimen/padding_recyclerview"
        android:paddingTop="@dimen/padding_recyclerview">

        <ImageView
            android:id="@+id/image_cardview"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:src="@drawable/metro_ranger_by_2078_ddqdgld"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionName_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/selector_raiting"
                    android:layout_width="@dimen/dimen_bones_cardview"
                    android:layout_height="@dimen/dimen_bones_cardview"
                    android:layout_gravity="center"
                    android:button="@drawable/selector_raiting"/>

                <TextView
                    android:id="@+id/name_pet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/marginleft_bettew_bone_and_text"
                    android:text="@string/name_pet"
                    android:textSize="@dimen/textsize_namepet_cardview"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="190dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/num_rating"
                    android:textSize="@dimen/textsize_numRaiting_cardview"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:layout_width="@dimen/dimen_bones_cardview"
                    android:layout_height="@dimen/dimen_bones_cardview"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/marginleft_bettew_bone_and_text"
                    android:src="@drawable/bone_color"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>